feat: added tailwind

--- a/006-settings/index.html
+++ b/006-settings/index.html
@@ -8,7 +8,7 @@
   <title>006 - Settings</title>
 </head>
 
-<body>
+<body class="bg-[#141417]">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
